--- a/ClientApp/Views/OwnedMasterDetail.xaml
+++ b/ClientApp/Views/OwnedMasterDetail.xaml
@@ -113,7 +113,7 @@
                             <StackPanel Grid.Column="1" HorizontalAlignment="Left">
                                 <TextBox x:Name="Name" PlaceholderText="List Name" Margin="0,15,0,0" MaxLength="100" Width="200" Text="{x:Bind Name, Mode=TwoWay}"/>
                                 <TextBox x:Name="Description" PlaceholderText="Description" Margin="0,15,0,0" MaxLength="300" Width="200" Text="{x:Bind Description, Mode=TwoWay}"/>
-                                <CalendarDatePicker x:Name="Deadline" PlaceholderText="Deadline" Margin="0,15,0,0" Width="200" Date="{x:Bind Deadline, Mode=TwoWay, Converter={StaticResource DateTimeToDateTimeOffset}}"></CalendarDatePicker>
+                                <!--<CalendarDatePicker x:Name="Deadline" PlaceholderText="Deadline" Margin="0,15,0,0" Width="200" Date="{x:Bind Deadline, Mode=TwoWay, Converter={StaticResource DateTimeToDateTimeOffset}}"></CalendarDatePicker>-->
                             </StackPanel>
                         </Grid>
                         
