--- a/ClientApp/Views/OwnedMasterDetail.xaml
+++ b/ClientApp/Views/OwnedMasterDetail.xaml
@@ -1,5 +1,5 @@
-﻿<Page
-    x:Class="ClientApp.OwnedMasterDetail"
+﻿<helpers:PrintablePage
+    xmlns:helpers="using:ClientApp.Helpers"    x:Class="ClientApp.OwnedMasterDetail"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:ClientApp"
@@ -17,7 +17,7 @@
     </Page.Transitions>
 
     <!--Start master detail-->
-    <Grid>
+    <Grid x:Name="Grid">
         <controls:MasterDetailsView x:Name="MasterDetail"
             ItemsSource="{x:Bind Lists, Mode=OneWay}"
             CompactModeThresholdWidth="720"
@@ -275,7 +275,7 @@
                     <AppBarButton Icon="Save" Label="Save" Click="Save"/>
                     <AppBarButton Icon="Send" Label="Send invitations" Click="Send"/>
                     <CommandBar.SecondaryCommands>
-                        <AppBarButton Icon="Document" Label="Export to PDF" Click="Export"/>
+                        <AppBarButton Icon="Print" Label="Print (also to PDF)" Click="Export"/>
                         <AppBarButton Icon="Delete" Label="Delete" Click="Delete"/>
                     </CommandBar.SecondaryCommands>
                 </CommandBar>
@@ -284,4 +284,4 @@
 
         </controls:MasterDetailsView>
     </Grid>
-</Page>
+</helpers:PrintablePage>
