--- a/ClientApp/Views/LoginRegisterPage.xaml
+++ b/ClientApp/Views/LoginRegisterPage.xaml
@@ -5,6 +5,7 @@
     xmlns:local="using:ClientApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     mc:Ignorable="d"
     Background="{ThemeResource MiddlePaneBackground}">
 
@@ -58,6 +59,15 @@
                 </StackPanel>
             </Button>
         </StackPanel>
-        <!--TODO: Add loading spinner-->
+
+        <!--Loading spinner-->
+        <controls:Loading x:Name="LoadingControl" IsLoading="False"
+            HorizontalContentAlignment="Center"
+            VerticalContentAlignment="Center">
+            <controls:Loading.Background>
+                <AcrylicBrush BackgroundSource="Backdrop" Opacity="0.65" TintColor="{ThemeResource SystemChromeMediumLowColor}" />
+            </controls:Loading.Background>
+            <ProgressRing IsActive="True" Width="75" Height="75" Foreground="{ThemeResource SystemAccentColor}" />
+        </controls:Loading>
     </Grid>
 </Page>
