--- a/ClientApp/Views/OwnedMasterDetail.xaml
+++ b/ClientApp/Views/OwnedMasterDetail.xaml
@@ -21,7 +21,8 @@
     <Grid x:Name="Grid">
         <controls:MasterDetailsView x:Name="MasterDetail"
             ItemsSource="{x:Bind Lists.Lists, Mode=TwoWay}"
-            SelectedItem="{x:Bind Lists.SelectedList, Mode=TwoWay}"
+            SelectedItem="{x:Bind Lists.SelectedList, Mode=OneWay}"
+            SelectionChanged="MasterDetail_SelectionChanged"
             CompactModeThresholdWidth="720"
             MasterPaneBackground="{ThemeResource MiddlePaneBackground}"
             Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
