--- a/ClientApp/Views/SubscriptionsMasterDetail.xaml
+++ b/ClientApp/Views/SubscriptionsMasterDetail.xaml
@@ -17,6 +17,11 @@
         </TransitionCollection>
     </Page.Transitions>
 
+    <Page.Resources>
+        <CollectionViewSource x:Key="ItemGrouping" x:Name="ItemGrouping" IsSourceGrouped="True" />
+    </Page.Resources>
+
+
     <!--Start master detail-->
     <Grid>
         <controls:MasterDetailsView x:Name="MasterDetail"
@@ -119,11 +124,12 @@
                                 <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
                                     <TextBlock Text="By "/>
                                     <TextBlock Margin="5,0,0,0" Text="{x:Bind OwnerUser.FullName}"/>
-                                    <TextBlock Margin="5,0,0,0" Text="{x:Bind OwnerUser.BracketedEmail}"/>
+                                    <TextBlock Margin="5,0,0,0" Text="{x:Bind OwnerUser.BracketedEmail}" FontSize="12" VerticalAlignment="Center"/>
                                 </StackPanel>
                                 <StackPanel Margin="0,10,0,0" Orientation="Horizontal" Tapped="ViewSubscribers">
                                     <TextBlock Text="Subscribers: "></TextBlock>
                                     <TextBlock Margin="10,0,0,0" Text="{x:Bind SubscribersTeaster}"></TextBlock>
+                                    <TextBlock Margin="10,0,0,0" Visibility="{x:Bind HasNoInvited}">No invited users</TextBlock>
                                 </StackPanel>
 
                                 <TextBlock Margin="0,10,0,0" Text="{x:Bind Description}"/>
@@ -157,10 +163,10 @@
 
                                     </StackPanel>
 
-                                    <ListView x:Name="Items" Margin="0,20" ItemsSource="{x:Bind Items}" SelectionMode="None">
+                                    <ListView x:Name="Items" Margin="0,20" ItemsSource="{Binding Source={StaticResource ItemGrouping}}" SelectionMode="None">
                                         <ListView.ItemTemplate>
                                             <DataTemplate x:DataType="viewmodels:ItemViewModel">
-                                                <Grid Padding="0,0,54,0">
+                                                <Grid Padding="0,0,54,0" Margin="0,5">
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="40"/>
                                                         <ColumnDefinition/>
@@ -187,23 +193,35 @@
                                                     <TextBlock Grid.Column="2" Grid.Row="0"
                                                         Text="{x:Bind ProductName}"
                                                         FontSize="15" 
-                                                        Style="{ThemeResource TitleTextBlockStyle}"/>
+                                                        Style="{ThemeResource BaseTextBlockStyle}"/>
 
                                                     <TextBlock Grid.Column="3" Grid.Row="0"
                                                         Margin="10,0,0,0"
-                                                        Text="{x:Bind ItemPriceUsd}"/>
+                                                        Text="{x:Bind Price}"/>
 
-                                                    <TextBlock Grid.Column="1"
+                                                    <TextBlock Grid.Column="2" Grid.Row="1"
                                                         Text="{x:Bind Description}"
+                                                        Style="{ThemeResource ListBodyTextBlockStyle}"
                                                         TextWrapping="Wrap"/>
 
-                                                    <!--TODO: hide button when no url set -->
-                                                    <!--Visibility="{x:Bind ProductInfoUrl, Converter={StaticResource StringVisibilityConverter} }"-->
-                                                    <Button Grid.Column="4" Margin="10,0,0,0" Click="OpenLink" Tag="{x:Bind ProductInfoUrl}" Content="View more info" />
+                                                    <Button Grid.Column="4" Grid.RowSpan="2" Margin="10,0,0,0" Click="OpenLink" Tag="{x:Bind ProductInfoUrl}" Visibility="{x:Bind HasProductInfoUrl}" Background="Transparent" VerticalAlignment="Center">
+                                                        <SymbolIcon>OpenPane</SymbolIcon>
+                                                    </Button>
 
                                                 </Grid>
                                             </DataTemplate>
                                         </ListView.ItemTemplate>
+                                        <ListView.GroupStyle>
+                                            <GroupStyle HidesIfEmpty="True">
+                                                <GroupStyle.HeaderTemplate>
+                                                    <DataTemplate>
+                                                        <TextBlock Text="{Binding Key}"
+                                                           FontSize="20" Margin="0,0,0,5"
+                                                           Style="{StaticResource HeaderTextBlockStyle}"/>
+                                                    </DataTemplate>
+                                                </GroupStyle.HeaderTemplate>
+                                            </GroupStyle>
+                                        </ListView.GroupStyle>
                                     </ListView>
                                 </StackPanel>
 
