--- a/ClientApp/Views/OwnedMasterDetail.xaml
+++ b/ClientApp/Views/OwnedMasterDetail.xaml
@@ -202,38 +202,10 @@
                                     <Button Click="AddNewWish" Margin="10">
                                         <StackPanel Orientation="Horizontal">
                                             <SymbolIcon>Add</SymbolIcon>
-                                            <TextBlock Text="Add more" Margin="5,0,0,0"/>
+                                            <TextBlock Text="Add" Margin="5,0,0,0"/>
                                         </StackPanel>
                                     </Button>
 
-                                </StackPanel>
-
-
-                                <!--subscribed users-->
-                                <StackPanel Grid.Row="1" Grid.Column="1" Padding="10" BorderThickness="0,0,1,0" BorderBrush="{ThemeResource SystemControlForegroundBaseLowBrush}">
-                                    <TextBlock
-                                    Text="Subscribed users"
-                                    Style="{ThemeResource TitleTextBlockStyle}" />
-
-                                    <ListView x:Name="SubscribedUsersList" Margin="0,20" ItemsSource="{x:Bind SubscribedUsers, Mode=OneTime}" SelectionMode="None">
-                                        <ListView.Header>
-                                            <TextBlock Visibility="{x:Bind HasNoSubscribers}">No subscribers</TextBlock>
-                                        </ListView.Header>
-                                        <ListView.ItemTemplate>
-                                            <DataTemplate x:DataType="viewmodels:UserViewModel">
-                                                <Grid>
-                                                    <Grid.ColumnDefinitions>
-                                                        <ColumnDefinition/>
-                                                        <ColumnDefinition Width="50"/>
-                                                    </Grid.ColumnDefinitions>
-                                                    <TextBlock Text="{x:Bind FullName, Mode=OneTime}" Grid.Column="0" Width="200"/>
-                                                    <Button Grid.Column="1" Background="Transparent" VerticalAlignment="Center">
-                                                        <SymbolIcon>Delete</SymbolIcon>
-                                                    </Button>
-                                                </Grid>
-                                            </DataTemplate>
-                                        </ListView.ItemTemplate>
-                                    </ListView>
                                 </StackPanel>
 
                                 <!--invited users-->
@@ -265,9 +237,36 @@
                                     <Button Click="AddInvite" Margin="10">
                                         <StackPanel Orientation="Horizontal">
                                             <SymbolIcon>Add</SymbolIcon>
-                                            <TextBlock Text="Add more" Margin="5,0,0,0" />
+                                            <TextBlock Text="Add" Margin="5,0,0,0" />
                                         </StackPanel>
                                     </Button>
+                                </StackPanel>
+
+                                <!--subscribed users-->
+                                <StackPanel Grid.Row="1" Grid.Column="1" Padding="10" BorderThickness="0,0,1,0" BorderBrush="{ThemeResource SystemControlForegroundBaseLowBrush}">
+                                    <TextBlock
+                                    Text="Subscribed users"
+                                    Style="{ThemeResource TitleTextBlockStyle}" />
+
+                                    <ListView x:Name="SubscribedUsersList" Margin="0,20" ItemsSource="{x:Bind SubscribedUsers, Mode=OneTime}" SelectionMode="None">
+                                        <ListView.Header>
+                                            <TextBlock Visibility="{x:Bind HasNoSubscribers}">No subscribers</TextBlock>
+                                        </ListView.Header>
+                                        <ListView.ItemTemplate>
+                                            <DataTemplate x:DataType="viewmodels:UserViewModel">
+                                                <Grid>
+                                                    <Grid.ColumnDefinitions>
+                                                        <ColumnDefinition/>
+                                                        <ColumnDefinition Width="50"/>
+                                                    </Grid.ColumnDefinitions>
+                                                    <TextBlock Text="{x:Bind FullName, Mode=OneTime}" Grid.Column="0" Width="200"/>
+                                                    <Button Grid.Column="1" Background="Transparent" VerticalAlignment="Center">
+                                                        <SymbolIcon>Delete</SymbolIcon>
+                                                    </Button>
+                                                </Grid>
+                                            </DataTemplate>
+                                        </ListView.ItemTemplate>
+                                    </ListView>
                                 </StackPanel>
 
                             </Grid>
