Fix Price input # 37

--- a/ClientApp/Views/OwnedMasterDetail.xaml
+++ b/ClientApp/Views/OwnedMasterDetail.xaml
@@ -7,6 +7,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="using:ClientApp.Models"
+    xmlns:extensions="using:Microsoft.Toolkit.Uwp.UI.Extensions"
     xmlns:viewmodels="using:ClientApp.ViewModels"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:system="using:System"
@@ -166,7 +167,10 @@
 
                                                     <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
                                                         <TextBox Margin="5" PlaceholderText="Name" Text="{x:Bind ProductName, Mode=TwoWay}" MinWidth="200" />
-                                                        <TextBox Margin="5" PlaceholderText="Price" Text="{x:Bind ItemPriceUsd, Mode=TwoWay}" MinWidth="80" />
+                                                        <TextBox Margin="5" PlaceholderText="Price"  MinWidth="80"
+                                                             Text="{x:Bind ItemPriceUsd, Mode=TwoWay}"
+                                                             extensions:TextBoxRegex.ValidationMode="Forced"
+                                                             extensions:TextBoxRegex.ValidationType="Decimal" />
                                                     </StackPanel>
 
                                                     <TextBox Grid.Column="1" AcceptsReturn="True" TextWrapping="Wrap" Grid.Row="1" Margin="5" PlaceholderText="Description" Text="{x:Bind Description, Mode=TwoWay}" />
